# iterator

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.c
src/include/iterator/: iterator.h
src/src/: iterator.c
tests/: CMakeLists.txt  iterator_test.cpp  run_all_tests.cpp
